Bug 1381591 - Refactor plugin initialization/performance telemetry to measure the things we care about, r=qdot data-r=rweiss

MozReview-Commit-ID: CZ6AZ64RUt9

--HG--
extra : rebase_source : 2e5a2fea836393d361fee73703b70f09f0a8dd7c
extra : source : 59cca9197907954aa01b13087ba7be60eab5d318